--- a/execution_app/templates/enter_nickname.html
+++ b/execution_app/templates/enter_nickname.html
@@ -234,7 +234,13 @@
                     <p>${data.is_correct ? "✅ Правильно!" : "❌ Неправильно!"}</p>
                     <p>Правильный ответ: <b>${data.correct_answer}</b></p>
                 `;
+                const allBtns = document.querySelectorAll('.answer-button, label'); // Вибираємо всі кнопки відповідей
                 if (data.type === 'one answer') {
+                    allBtns.forEach(btn => {
+                    const btnId = parseInt(btn.value);
+                    if (btnId !== data.answer_id && btnId !== data.correct_answer_id) {
+                        btn.remove(); 
+                    }});
                     if (data.is_correct) {
                         const answerBtn = document.getElementById(`answerBtn${data.answer_id}`);
                         answerBtn.style.opacity = 1;
@@ -257,6 +263,11 @@
                         btn.style.opacity = 1;
                         btn.style.backgroundColor = btn.style.backgroundColor === 'green' ? 'green' : 'red';
                     });
+                    allBtns.forEach(btn => {
+                    const btnId = parseInt(btn.value);
+                    if (btnId !== data.answer_id && btnId !== data.correct_answer_id) {
+                        btn.remove(); 
+                    }});
                     const correctAnswerBtns = data.correct_answer_id.map(id => document.getElementById(`answerBtn${id}`));
                     correctAnswerBtns.forEach(btn => {
                         btn.style.opacity = 1;
