--- a/library_app/static/css/create_quiz.css
+++ b/library_app/static/css/create_quiz.css
@@ -166,6 +166,7 @@ main{
 }
 
 .create-block{
+    position: relative;
     width: 80%;
     height: 80%;
     display: flex;
@@ -645,4 +646,17 @@ hr {
 .backwood img {
     width: 100%;
     height: 100%;
+}
+.label-for-image {
+    position: absolute;
+    left: 30px;
+    top: 35px;
+    width: 30px;
+    height: 30px;
+    background-color: #6d6d6d;
+    border-radius: 5px;
+    display: flex;
+    justify-items: center;
+    padding: 4px;
+    cursor: pointer;
 }
