--- a/execution_app/static/css/execution.css
+++ b/execution_app/static/css/execution.css
@@ -346,3 +346,72 @@ main {
     border-radius: 10px;
     cursor: pointer;
 }
+.modal {
+    visibility: visible;
+    position: fixed;
+    z-index: 1000;
+    left: 50%;
+    top: 2%;
+    transform: translate(-50%, 0);
+    width: 900px;
+    max-height: 70vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-top: 50px;
+    transition: all 0.3s ease;
+    opacity: 1;
+}
+.modal.hidemodal {
+    visibility: hidden;
+    top: -10% !important;
+    opacity: 0;
+}
+.modal img {
+    max-width: 100%;
+    max-height: 100%;
+    border-radius: 5px;
+}
+.modal div {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 25px;
+    background-color: #2B2B2B;
+    border-radius: 5px;
+}
+.modal button {
+    position: absolute;
+    top: 0;
+    right: -8px;
+    width: 45px;
+    height: 45px;
+    background: none;
+    border: none;
+    color: white;
+    border-radius: 15px;
+    cursor: pointer;
+}
+.modal button img {
+    width: 100%;
+    height: 100%;
+}
+#Wblur {
+    visibility: visible;
+    position: fixed;
+    z-index: 900;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(5px);
+    transition: all 0.3s ease-in-out;
+    opacity: 1;
+}
+#Wblur.hideblur {
+    visibility: hidden;
+    opacity: 0;
+}
