--- a/user_app/templates/login.html
+++ b/user_app/templates/login.html
@@ -17,7 +17,7 @@ Login
     </div>
     <div class="submit">
         <button>Увiйти</button>
-        <p>Не маєте аккаунту? <a href="">Зареєструавитись</a></p>
+        <p>Не маєте аккаунту? <a href="/signup/">Зареєструватися</a></p>
     </div>
 </form>
 {% endblock %}
