--- a/execution_app/static/css/execution.css
+++ b/execution_app/static/css/execution.css
@@ -156,7 +156,7 @@ main {
 #waitingDiv {
     display: flex;
     position: absolute;
-    width: 100%;
+    width: 0;
     height: 80px;
     left: 0;
     top: 50%;    
@@ -167,11 +167,12 @@ main {
     opacity: 0;
     visibility: hidden;
     transition: all 0.5s ease; 
-    z-index: 10;
+    z-index: 1000;
 }
 
 #waitingDiv.waiting-div {
-    opacity: 0.8;
+    width: 100%;
+    opacity: 1;
     visibility: visible;
 }
 #waitingDiv h2 {
@@ -410,8 +411,52 @@ main {
     backdrop-filter: blur(5px);
     transition: all 0.3s ease-in-out;
     opacity: 1;
+    z-index: 999;
 }
 #Wblur.hideblur {
     visibility: hidden;
     opacity: 0;
+}
+#WWblur {
+    visibility: visible;
+    position: fixed;
+    z-index: 900;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(1px);
+    transition: all 0.3s ease-in-out;
+    opacity: 1;
+    z-index: 999;
+}
+#WWblur.hideblur {
+    visibility: hidden;
+    opacity: 0;
+}
+#notifyDiv {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0.9;
+    width: 0px;
+    height: 70px;
+    z-index: 1000;
+    transition: all 0.5s;
+}
+#notifyDiv h2 {
+    color: white;
+    
+}
+
+.notify-correct {
+    background-color: #22CE00;
+}
+.notify-wrong {
+    background-color: #F03C39;
 }
