--- a/project/static/css/base_admin.css
+++ b/project/static/css/base_admin.css
@@ -60,7 +60,7 @@ h1{
 aside button{
     width: 100%;
     height: 50px;
-    background-color: #28f200;
+    background-color: #22CE00;
     border: none;
     border-radius: 10px;
     color: white;  
