--- a/host_app/templates/hosting.html
+++ b/host_app/templates/hosting.html
@@ -30,7 +30,7 @@
                     <h4>Приєднайтеся за посиланням</h4>
                     <button id="copy-url"><img src="{{ url_for('host_app.static', filename='images/copy.svg') }}"></button>
                 </div>
-                <a href="" target="__blank" id="linkToJoin">joinqptquiz.com</a>
+                <a href="" onclick="window.open(this.href); return false;" id="linkToJoin">joinqptquiz.com</a>
                 <div class="line"></div>
                 <div class="how-to-join">
                     <div>
