Added validate registration & email

--- a/execution_app/static/css/execution.css
+++ b/execution_app/static/css/execution.css
@@ -460,3 +460,13 @@ main {
 .notify-wrong {
     background-color: #F03C39;
 }
+
+.spinner {
+    height: 100%;
+    animation: spin 1.5s linear infinite;
+}
+
+@keyframes spin {
+    from { transform: rotate(0deg); }
+    to { transform: rotate(360deg); }
+}
