--- a/user_app/static/css/signup.css
+++ b/user_app/static/css/signup.css
@@ -3,21 +3,64 @@ form {
     left: 50%;
     top: 25%;
     transform: translate(-50%, -25%);
-    /*  */
     width: 525px;
-    height: 635px;
-    /*  */
+    height: 585px;
     border-radius: 40px;
-    /*  */
     background-color: #262626;
-    /*  */
     display: flex;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
     flex-direction: column;
+    overflow: hidden;
     gap: 20px;
     padding: 20px 30px;
-    /*  */
+    transition: all ease 0.5s;
+}
+#waitImg {
+    width: 150px;
+    animation: spin 1.5s linear infinite;
+}
+
+@keyframes spin {
+    from { transform: rotate(0deg); }
+    to { transform: rotate(360deg); }
+}
+
+.subtitle {
+    font-size: 28px;
+    color: white;
+    text-align: center;
+}
+.desc {
+    width: 100%;
+    font-size: 22px;
+    text-align: center;
+    color: white;
+}
+.code-div {
+    position: relative;
+    display: flex;
+    width: 100%;
+    padding: 10px;
+    gap: 10px;
+    height: 100px;
+}
+.input-code-number {
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    background-color: #212121;
+    border-radius: 10px;
+    text-decoration: underline;
+    text-decoration-color: #9C47FF;
+    font-size: 40px;
+    font-weight: 400;
+    color: white;
+    border: none;
+}
+.help-text {
+    
+    color: white;
 }
 h2 {
     color: #FFFFFF;
@@ -58,7 +101,6 @@ h2 {
     justify-content: center;
     align-items: center;
     flex-direction: column; 
-    margin-top: 50px;
     gap: 10px;
 }
 .submit button {
