--- a/user_app/templates/signup.html
+++ b/user_app/templates/signup.html
@@ -17,6 +17,7 @@
             <input type="text" id="surname" name="surname" class="surname" autocomplete="off" placeholder="Ваше прізвище *" required>
             <input type="email" id="email" name="email" class="email" autocomplete="off" placeholder="Ваша електронна адреса *" required>
             <input type="password" id="password" name="password" class="password" autocomplete="off" placeholder="Пароль *" required>
+            <div id="generalErrors"></div>
         </div>
         <div class="submit">
             <button type="submit" id="submit">Зареєструватися</button>
