Added using API Brevo for sending emails

--- a/reports_app/templates/detail_report.html
+++ b/reports_app/templates/detail_report.html
@@ -61,7 +61,7 @@
             </div>
         </div>
     </div>
-    <div id="blur" style="display: none;"></div>
+    <div id="blurrrr" style="display: none;"></div>
     <div id="deleteModal" style="display: none;">
         <h3>Видалити <span>Звіт?</span></h3>
         <hr>
